samples/_failures_safe/1761555530_c5168e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2466b098.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_2466b098.c:157:5: error: expected expression at end of input
  157 |     if (parse_number(input, pos, len, token)) return
      |     ^~
./samples/SAFE/__tmp_2466b098.c:157:5: error: expected declaration or statement at end of input
